fixed quran translation overlapping calendar

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,11 +245,11 @@ body {
 
 .calendar-container {
   width: 100%;
-  height: 100%;
+  height: calc(100% + 60px);
   background-color: #fff;
   position: absolute;
   left: 0;
-  top: -100%;
+  top: calc(-100% - 60px);
   transition: top .6s ease-in, opacity .4s ease-in-out;
   color: #333;
   opacity: 0;
